# FluxShell

./: .gitignore  meson.build
include/: builtins.h  command.h  constants.h  env.h  executor.h  lib.h  meson.build  parser.h  tokenizer.h  utils.h
src/: builtins.c  command.c  env.c  executor.c  main.c  meson.build  parser.c  tokenizer.c  utils.c
